--- a/src/Component/Navber/css/style.css
+++ b/src/Component/Navber/css/style.css
@@ -35,22 +35,22 @@ ul {
 /* search part */
 
 
-.search_btn{
+/* .search_btn{
   color: #6c757d;
-}
-
+} */
+/* 
 .search_btn:hover{
   color: #c39f57;
-}
+} */
 
-.search_bar{
+/* .search_bar{
   position: relative;
-}
+} */
 
-.search_btn {
+/* .search_btn {
   right: 2%;
   position: absolute;
-}
+} */
 
 .header_icon:hover {
   color: #c39f57 !important;
