--- a/src/Component/Footer/css/style.css
+++ b/src/Component/Footer/css/style.css
@@ -34,6 +34,7 @@ ul {
 
 .footer_item .footer_text_hover{
   padding-left:0;
+  transition: all 0.6s ease-in-out;
 }
 
 .footer_item .footer_text_hover:hover {
